compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__empty_tuple.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go() {\n  let value = #()\n}\n"
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.

let private go () = begin
    let value = EmptyTuple
    value
end
